# epistemological-uncertainty

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
docs/: theory.md
euq/: __init__.py  datasets.py  pipeline.py  report.py  strata.py
examples/: 01_screening_classifier.py  02_group_rate_gap.py  README.md
tests/: test_euq.py
